--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   "cordovaPlugins": [
     "org.apache.cordova.console",
     "org.apache.cordova.device",
+    "com.ionic.keyboard",
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
     "com.ionic.keyboard"
   ]
 }
