--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "cordova": "~4.2.0",
     "lodash": "~3.1.0",
     "mkdirp": "~0.5.0",
-    "ncp": "~1.0.1",
+    "ncp": "~1.0.1ky",
     "orchestrator": "~0.3.7",
     "ripple-emulator": "~0.9.24",
     "elementtree": "0.1.6",
