--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
   "curly": true,
   "eqeqeq": true,
   "immed": true,
-  "indent": 2,
+  "indent": false,
   "latedef": true,
   "newcap": true,
   "noarg": true,
@@ -21,6 +21,9 @@
   "globals": {
     "angular": false,
     "cordova": false,
-    "StatusBar": false
+    "StatusBar": false,
+    "sms": false,
+    "ContactFindOptions" : false,
+    "alert" : false
   }
 }
