--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,13 @@
 {
-  "name": "AntiSocialite",
+  "name": "antiSocialite",
   "version": "0.0.0",
   "dependencies": {
-    "ionic": "v1.0.0-rc.3",
-    "ngCordova": "v0.1.14-alpha",
-    "open-sans-fontface": "~1.4.0",
+    "ionic": "v1.0.0-beta.13",
     "angular-local-storage": "~0.1.5",
-    "collide": "~0.0.4"
+    "open-sans-fontface": "~1.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.6",
-    "angular-scenario": "~1.3.6"
-  },
-  "resolutions": {
-    "angular": ">= 1.3.6"
+    "angular-mocks": "~1.2.17",
+    "angular-scenario": "~1.2.17"
   }
 }
