--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
   "name": "antiSocialite",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "ionic": "v1.0.0-beta.13",
     "angular-local-storage": "~0.1.5",
-    "open-sans-fontface": "~1.2.0"
+    "open-sans-fontface": "~1.2.0",
+    "angular-http-auth": "https://github.com/witoldsz/angular-http-auth.git#1.2.2",
+    "lodash": "~3.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.17",
