(fix) Added cordova whitelist plugin and config.xml entries

--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
     "org.apache.cordova.contacts",
     "https://github.com/aharris88/phonegap-sms-plugin.git",
     "https://github.com/phpsa/cbsp.git",
-    "https://github.com/katzer/cordova-plugin-background-mode.git"
+    "https://github.com/katzer/cordova-plugin-background-mode.git",
+    "https://github.com/apache/cordova-plugin-whitelist.git"
+  ],
+  "cordovaPlatforms": [
+    "android"
   ]
 }
