--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "antiSocialite",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "colors": "^1.1.0",
+    "end-of-stream": "^1.1.0",
+    "event-stream": "^3.3.1",
+    "ionic-app-lib": "0.0.20",
+    "optimist": "^0.6.1",
+    "q": "^1.4.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "glob": "~4.0.5",
