--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.2.17",
-    "angular-scenario": "~1.2.17"
+    "angular-scenario": "~1.2.17",
+    "ionic-timepicker": "~0.1.2"
   }
 }
